--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,21 @@
 @import "{{ site.theme }}";
 
 strong {
-  font-weight: 1500;
-  color: #006400;
+  font-weight: 150;
+  color: #064;
+  
+header {
+  padding: 120px 120px 120px 120px;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left:0;
+  right:0;
+  width: 100%;
+  text-align: center;
+  background: url(../images/background.png) #4276b6;
+  box-shadow: 1px 0px 2px rgba(0,0,0,.75);
+  z-index:99;
+  -webkit-font-smoothing:antialiased;
+  min-height: 76px;
 
