--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,8 @@
 strong {
   font-weight: 150000;
   color: #064;
-  
+}
+
 header {
   padding: 120px 120px 120px 120px;
   margin: 0;
@@ -19,4 +20,5 @@ header {
   background: url(../images/background.png) #4276b6;
   box-shadow: 1px 0px 2px rgba(0,0,0,.75);
   z-index:99;
-
+  
+  }
